Добавлен тестовый класс для PostRepository